fix: return actual json and not its string impl